--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ h1 {
     </style>
     </head>
     <body>
-    <h1>Happy Birthday Honey🎂🎊🥳
+    <h1>Happy Birthday Suman🎂🎊🥳
         </h1>
         <img src="photos/suman.jpg" style="height: 200px;width: 150px;align-items: center;">
         <br>
